--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
+
 
     </dependencies>
 
